# skprogs

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  README.rst  config.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
cmake/: SkProgsUtils.cmake
common/include/: LICENSE  common.fypp  error.fypp
common/lib/: CMakeLists.txt  LebedevLaikov.cc  accuracy.F90  accuracy.f90  anglib.F90  assert.F90  constants.F90  constants.f90  coordtrans.F90  eigensolver.F90  environment.F90  fdiff.F90  fifo.F90  fifo.f90  fifo_real1.F90  fifo_real1.f90  fifo_real2.F90  fifo_real2.f90  fifobase.F90  fifobase.f90  globalenv.F90  gridgenerator.F90  interpolation.F90  lapack.F90  lebedev_laikov.F90  message.F90  mpienv.F90  mpifx.F90  partition.F90  poisson.F90  quadrature.F90  schedule.F90  sphericalharmonics.F90  splines.F90  taggedout.F90  taggedout.f90  utils.F90
doc/: input.txt
doc/devel/: code_structure.txt  general_notes.txt
doc/recipes/: README.rst
doc/recipes/docs/: Makefile  conf.py  index.rst  introduction.rst  licence.rst
doc/recipes/docs/_downloads/archives/: recipes.tar.bz2
examples/mio/: skdef.hsd
sktools/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
sktools/src/sktools/: __init__.py  common.py  compressions.py  oldskfile.py  radial_grid.py  skdef.py  taggedfile.py  twocenter_grids.py  xcfunctionals.py
sktools/src/sktools/calculators/: __init__.py  gridatom.py  sktwocnt.py  slateratom.py
sktools/src/sktools/hsd/: __init__.py  converter.py  formatter.py  parser.py  query.py  test.hsd  tree.py  treebuilder.py
sktools/src/sktools/scripts/: collectspinw.py  collectwavecoeffs.py  skdiff.py  skexp.py  skgen.py  skmanip.py  splinerepfit.py
sktools/src/sktools/skgen/: __init__.py  atom.py  common.py  compression.py  path.py  sktable.py  twocnt.py
sktwocnt/lib/: CMakeLists.txt  bisection.f90  coordtrans.f90  dftbxc.f90  gridgenerator.f90  gridorbital.f90  interpolation.f90  partition.f90  quadrature.f90  sphericalharmonics.f90  twocnt.F90  twocnt.f90  xcfunctionals.f90
sktwocnt/prog/: CMakeLists.txt  cmdargs.f90  input.f90  main.F90  main.f90  output.f90
slateratom/: CMakeLists.txt
slateratom/lib/: CMakeLists.txt  avgpot.f90  blas.f90  blasroutines.F90  blasroutines.f90  broyden.f90  broydenmixer.F90  broydenmixer.f90  confinement.F90  confinement.f90  core_overlap.f90  coulomb_hfex.f90  coulomb_potential.f90  density.f90  densitymatrix.f90  dft.f90  diagonalizations.f90  diis.F90  diismixer.F90  globals.f90  grid_differentiation_sign_1.txt  grid_differentiation_sign_2.txt  hamiltonian.f90  input.F90  input.f90  integration.f90  lapack.f90  lapackroutines.F90  lapackroutines.f90  mixer.f90  numerical_differentiation.f90  output.f90  simplemixer.F90  simplemixer.f90  total_energy.f90  utilities.f90  xcfunctionals.F90  xcfunctionals.f90  zora_routines.f90
slateratom/prog/: CMakeLists.txt  cmdargs.f90  main.F90  main.f90
sys/: generic.cmake  gnu.cmake  intel.cmake  nag.cmake
test/: CMakeLists.txt
test/prog/sktable/: CMakeLists.txt  tests
test/prog/sktable/CAMY-B3LYP/Non-Relativistic/: _C-C.skf  _C-N.skf  _N-C.skf  _N-N.skf  skdef.hsd
test/prog/sktable/CAMY-PBEh/Non-Relativistic/: _N-N.skf  _N-O.skf  _O-N.skf  _O-O.skf  config  skdef.hsd
test/prog/sktable/GGA-PBE96/Non-Relativistic/: _N-N.skf  _N-O.skf  _O-N.skf  _O-O.skf  config  skdef.hsd
test/prog/sktable/HYB-B3LYP/Non-Relativistic/: _C-C.skf  _C-N.skf  _N-C.skf  _N-N.skf  config  skdef.hsd
test/prog/sktable/HYB-PBE0/Non-Relativistic/: _C-C.skf  _C-N.skf  _N-C.skf  _N-N.skf  skdef.hsd
test/prog/sktable/LCY-BNL/Non-Relativistic/: _N-N.skf  _N-O.skf  _O-N.skf  _O-O.skf  skdef.hsd
test/prog/sktable/LCY-PBE96/Non-Relativistic/: _N-N.skf  _N-O.skf  _O-N.skf  _O-O.skf  skdef.hsd
test/prog/sktable/LDA-PW91/Non-Relativistic/: _O-C.skf  config
test/prog/sktable/LDA-PW91/Non-Relativistic/Dynamic-conv/: _C-C.skf  skdef.hsd
test/prog/sktable/LDA-PW91/Non-Relativistic/Dynamic-noconv/: _C-C.skf  skdef.hsd
test/prog/sktable/LDA-PW91/Non-Relativistic/Power/: _C-C.skf  _C-O.skf  _O-C.skf  _O-O.skf  config  skdef.hsd
test/prog/sktable/LDA-PW91/Non-Relativistic/WS/: _C-C.skf  config  skdef.hsd
utils/export/: skprogs-activate.sh.in  skprogs-config.cmake.in
utils/srcmanip/: set_version
utils/test/: check_submodule_commits
