[metadata]
name = sktools
version = 22.1
author = DFTB+ developers
url = http://www.dftbplus.org
description = Tools to Generate Electronic SK-parameters
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL-3.0-or-later
license_files =
    ../COPYING
    ../COPYING.LESSER
platform = any

[options]
include_package_data = True
package_dir =
    = src
packages =
    sktools
    sktools.hsd
    sktools.calculators
    sktools.skgen
scripts =
    bin/collectspinw
    bin/collectwavecoeffs
    bin/skdiff
    bin/skgen
install_requires =
    numpy
    scipy
python_requires = >=3.2
