[metadata]
name = sktools
version = 0.3
author = DFTB+ developers
url = http://www.dftbplus.org
description = Tools to Generate Electronic SK-parameters
license = LGPL-3.0-or-later
license_files =
    ../COPYING
    ../COPYING.LESSER
platform = any

[options]
include_package_data = True
package_dir =
    = src
packages =
    sktools
    sktools.hsd
    sktools.calculators
    sktools.skgen
    sktools.scripts
install_requires =
    numpy
    scipy

[options.entry_points]
console_scripts =
    collectspinw = sktools.scripts.collectspinw:main
    collectwavecoeffs = sktools.scripts.collectwavecoeffs:main
    skdiff = sktools.scripts.skdiff:main
    skexp = sktools.scripts.skexp:main
    skgen = sktools.scripts.skgen:main
    skmanip = sktools.scripts.skmanip:main

python_requires = >=3.2
